# mia_fr

./: .env.example  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  start_prod.sh
nginx/: nginx.conf
nginx/certs/: certificate.crt  privateKey.key
src/apps/: urls.py
src/apps/common/: admin.py  apps.py  db_log_handler.py  models.py
src/apps/common/migrations/: 0001_initial.py  0002_statuslog_username.py  0003_alter_statuslog_options.py
src/apps/common/mixins/: models.py
src/apps/common/utils/: decorators.py
src/apps/persons/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  tasks.py  viewsets.py
src/apps/persons/migrations/: 0001_initial.py  0002_alter_originalimage_face_ids.py  0003_alter_originalimage_face_ids.py  0004_alter_originalimage_face_ids.py  0005_alter_originalimage_face_ids.py  (+2 more)
src/apps/users/: __init__.py  admin.py  models.py
src/apps/web/: models.py  utils.py  views.py
src/config/: celery_app.py  delayed_queues.py  urls.py
src/config/middlewares/: request_logger.py
src/config/server/: asgi.py  wsgi.py
src/config/settings/: base.py  production.py
src/fixtures/: Group.json
src/templates/admin/: base.html  doa_change_form.html  similar_persons.html  similar_persons_fieldset.html  stacked.html
src/templates/registration/: base.html
src/templates/web/: 404.html  base.html  change_password.html  face_detail.html  face_recognition_requests.html  fr_sidebar.html  header.html  index.html  login.html  original_image_detail.html  sidebar.html
(+5 files in other folders)
